# hiring-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  SETUP.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  HR interview process workflow.md  README.md  add_cols.py  add_columns_direct.py  add_position_col.py  apply_migration.py  apply_sql.py  check.py  check_candidate.py  check_columns.py  check_criteria.py  check_db.py  check_evals.py  check_heer_stages.py  check_quality.py  check_segments.py  check_tables.py  docker-compose.yml  find_heer.py  find_heer_full.py  find_test_candidate.py  fix_decisions.py  list_all_candidates.py  list_candidates.py  list_templates.py  list_transcripts.py  logs2.txt  migrate_existing_db.py  migrate_screening.py  prepare_test.py  pyproject.toml  pytest.ini  reset_alexa.py  reset_specific.py  reset_stage.py  reset_stages.py  (+19 more)
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  celery_app.py  config.py  constants.py  embeddings.py  exceptions.py  extractor.py  logging.py  middleware.py  prompts.py  (+2 more)
backend/docs/: db.md  resume-screening-latency.md
backend/logs/: logs1.md  logs1.txt  logs2.md  logs3.md  logs3.txt  logs4.md  logs4.txt  logs5.md  logs5.txt  logs6.md  logs6txt
backend/migrations/: README.md  add_case_insensitive_unique_constraints.sql  add_default_flags_to_templates.sql  add_evaluation_versioning_and_fixes.sql  add_job_priorities_and_priority_columns.sql  add_location_to_candidates.sql  add_match_analysis_to_cross_job_matches.sql  add_notes_to_hr_decisions.sql  add_passing_threshold_v2.sql  add_processing_version_to_jobs.sql  add_skill_unique_constraints.sql  add_vacancy_to_jobs_and_job_versions.sql  comprehensive_integrity_fix.sql  create_candidate_stages_table.sql  create_locations_table.sql  fix_candidate_skills_cascade.sql  fix_cross_job_match_defaults.sql  fix_cross_job_match_nullability.sql  fix_job_deletion_cascade_for_candidates.sql  stage1_schema_update.sql
backend/scratch/: check_evaluation.py  check_redis.py  find_stage_ids.py  manual_eval_test.py  migrate_eval_passed.py  test_repeat.py  test_trim.py  test_trim_v2.py  verify_backward_compat.py  verify_eval_format.py
backend/seed/: main.py  seed.py  seed_departments.py  seed_for_user.py  seed_frontend_dev.py  seed_job.py  seed_new_job.py  seed_skills.py  seed_stages.py
backend/tmp/: check_history.py  history_output.json
(+545 files in other folders)
