[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "HR Platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "docx2txt>=0.9",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.135.1",
    "fastcrud>=0.21.0",
    "langextract>=1.1.1",
    "pydantic>=2.12.5",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.11.0",
    "sentence-transformers>=5.3.0",
    "pymupdf>=1.27.2",
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
    "sqlalchemy>=2.0.44",
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
]


# temp solution for modules not found
[project.scripts]
seed-all = "seed.main:run"

[tool.setuptools.packages.find]
include = ["app*", "packages*", "seed*"]
